--- a/myapp/pages/client/detalle.html
+++ b/myapp/pages/client/detalle.html
@@ -1,6 +1,4 @@
-{% extends '../base.html' %}
-
-{% block content %}
+{% extends '../base.html' %} {% block content %}
 <h1>Detalle</h1>
 
 <p>Codigo: {{data.id}}</p>
@@ -8,6 +6,5 @@
 <p>Limite de Credito: {{data.LimiteCredito}}</p>
 <p>Pais: {{data.Pais}}</p>
 <p>Fecha de ingreso: {{data.FechaIngreso}}</p>
-
 
 {% endblock%}
