--- a/myapp/pages/Base.html
+++ b/myapp/pages/Base.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static%}
+    <link rel="stylesheet" href="{% static './css/style.css'%}">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
@@ -17,13 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto d-flex gap-3">
             <li class="nav-item">
-              <a class="nav-link active fs-5" aria-current="page" href="#">Home</a>
+              <a class="nav-link active fs-5" aria-current="page" href="{% url 'index'%}">Listado</a>
             </li>
             <li class="nav-item fs-5">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item fs-5">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="{% url 'create'%}">Nuevo Cliente</a>
             </li>
           </ul>
         </div>
@@ -34,6 +32,7 @@
     <!-- load content here -->
     {% endblock%}
 
+    <script src="{% static './js/app.js'%}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
