--- a/myapp/pages/client/index.html
+++ b/myapp/pages/client/index.html
@@ -26,12 +26,44 @@
         <td class="align-middle">
           <a href="/myapp/detalle/{{c.id}}" class="btn btn-primary fw-semibold">Ver</a>
           <a href="/myapp/delete/{{c.id}}" class="btn btn-danger fw-semibold">Borrar</a>
-          <a href="/myapp/update/{{c.id}}" class="btn btn-warning fw-semibold">Editar</a>
-         
+          <a href="/myapp/update/{{c.id}}" class="btn btn-warning fw-semibold text-white">Editar</a>
         </td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
+
+  <nav aria-label="Page navigation" class="mt-4">
+    <ul class="pagination justify-content-center">
+        {% if data.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ data.previous_page_number }}">Previous</a>
+            </li>
+        {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">Anterior</span>
+            </li>
+        {% endif %}
+
+        <li class="page-item active">
+            <span class="page-link">
+                Page {{ data.number }} de {{ data.paginator.num_pages }}
+            </span>
+        </li>
+
+        {% if data.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ data.next_page_number }}">Siguiente</a>
+            </li>
+        {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">Siguiente</span>
+            </li>
+        {% endif %}
+    </ul>
+</nav>
+
+
+  
 </div>
 {% endblock%}
