--- a/myapp/pages/Base.html
+++ b/myapp/pages/Base.html
@@ -21,7 +21,7 @@
               <a class="nav-link active fs-5" aria-current="page" href="{% url 'index'%}">Listado</a>
             </li>
             <li class="nav-item fs-5">
-              <a class="nav-link" href="{% url 'create'%}">Nuevo Cliente</a>
+              <a class="nav-link active" href="{% url 'create'%}">Nuevo Cliente</a>
             </li>
           </ul>
         </div>
@@ -31,8 +31,8 @@
     {% block content%}
     <!-- load content here -->
     {% endblock%}
+    <script src="{% static './js/app.js '%}"></script>
 
-    <script src="{% static './js/app.js'%}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
