--- a/myapp/pages/client/create.html
+++ b/myapp/pages/client/create.html
@@ -1,11 +1,20 @@
 {% extends '../base.html'%}
 
 {% block content%}
-
 <h1>Nuevo Cliente</h1>
-<form method="post" action="/myapp/create">
+<form method="post" action="/myapp/create" id="id_form">
   {% csrf_token %}
-  {{form.as_p}}
-  <input type="submit" value="submit">
+  <label for="id_Nombre">Nombre:</label>
+  <input type="text" name="Nombre" maxlength="50" required="" id="id_Nombre"> 
+ 
+  <label for="id_LimiteCredito">LimiteCredito:</label>
+  <input type="number" name="LimiteCredito" step="1" required="" id="id_LimiteCredito" min="1" max="100">
+    
+  <label for="id_Pais">Pais:</label>
+  <select name="Pais" required="" id="id_Pais">
+    <option value="" selected="">---------</option>
+  </select>
+  <input type="submit" class="btn btn-primary" value="Agregar">
 </form>
+
 {% endblock%}
