--- a/myapp/pages/client/index.html
+++ b/myapp/pages/client/index.html
@@ -1,5 +1,9 @@
 {% extends '../base.html'%} {% block content%}
 <div class="container">
+  
+
+
+
   <a class="btn bg-primary text-bg-primary mt-5" href="/myapp/create"
     >Agregar nuevo cliente</a
   >
@@ -33,37 +37,39 @@
     </tbody>
   </table>
 
-  <nav aria-label="Page navigation" class="mt-4">
-    <ul class="pagination justify-content-center">
-        {% if data.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ data.previous_page_number }}">Previous</a>
-            </li>
-        {% else %}
-            <li class="page-item disabled">
-                <span class="page-link">Anterior</span>
-            </li>
-        {% endif %}
+{% if data.paginator.num_pages > 1%}
+<nav aria-label="Page navigation" class="mt-4">
+  <ul class="pagination justify-content-center">
+      {% if data.has_previous %}
+          <li class="page-item">
+              <a class="page-link" href="?page={{ data.previous_page_number }}">Previous</a>
+          </li>
+      {% else %}
+          <li class="page-item disabled">
+              <span class="page-link">Anterior</span>
+          </li>
+      {% endif %}
 
-        <li class="page-item active">
-            <span class="page-link">
-                Page {{ data.number }} de {{ data.paginator.num_pages }}
-            </span>
-        </li>
+      <li class="page-item active">
+          <span class="page-link">
+              Page {{ data.number }} de {{ data.paginator.num_pages }}
+          </span>
+      </li>
 
-        {% if data.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ data.next_page_number }}">Siguiente</a>
-            </li>
-        {% else %}
-            <li class="page-item disabled">
-                <span class="page-link">Siguiente</span>
-            </li>
-        {% endif %}
-    </ul>
+      {% if data.has_next %}
+          <li class="page-item">
+              <a class="page-link" href="?page={{ data.next_page_number }}">Siguiente</a>
+          </li>
+      {% else %}
+          <li class="page-item disabled">
+              <span class="page-link">Siguiente</span>
+          </li>
+      {% endif %}
+  </ul>
 </nav>
+{% endif%}
 
-
+ 
   
 </div>
 {% endblock%}
