--- a/myapp/pages/client/update.html
+++ b/myapp/pages/client/update.html
@@ -6,7 +6,7 @@
 <h1>Actualizar Cliente</h1>
 <form method="post">
   {% csrf_token %}
-  {{form.as_p}}
+  {{form}}
   <input type="submit" value="submit">
 </form>
 {% endblock%}
