--- a/myapp/pages/client/create.html
+++ b/myapp/pages/client/create.html
@@ -5,13 +5,13 @@
 <form method="post" action="/myapp/create" id="id_form">
   {% csrf_token %}
   <label for="id_Nombre">Nombre:</label>
-  <input type="text" name="Nombre" maxlength="50" required="" id="id_Nombre"> 
+  <input type="text" name="Nombre" maxlength="50" id="id_Nombre" > 
  
   <label for="id_LimiteCredito">LimiteCredito:</label>
-  <input type="number" name="LimiteCredito" step="1" required="" id="id_LimiteCredito" min="1" max="100">
+  <input type="number" name="LimiteCredito" step="1" id="id_LimiteCredito" min="1" max="100">
     
   <label for="id_Pais">Pais:</label>
-  <select name="Pais" required="" id="id_Pais">
+  <select name="Pais" id="Pais">
     <option value="" selected="">---------</option>
   </select>
   <input type="submit" class="btn btn-primary" value="Agregar">
